version/0.68/_sources/examples/gallery_examples/01-geometry/01-lines.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01-geometry/01-lines.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-geometry_01-lines.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-geometry_01-lines.py:


.. _ref_basic-geometry-lines:

Lines
-----

This example shows how to create basic geometry
using lines commands.

.. GENERATED FROM PYTHON SOURCE LINES 33-45

.. code-block:: Python


    import numpy as np

    from ansys.mapdl.core import launch_mapdl

    # start MAPDL and enter the pre-processing routine
    mapdl = launch_mapdl()
    mapdl.clear()
    mapdl.prep7()
    print(mapdl)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Product:             Ansys Mechanical Enterprise Academic Student
    MAPDL Version:       24.2
    ansys.mapdl Version: 0.68.4





.. GENERATED FROM PYTHON SOURCE LINES 46-50

APDL Command: L
~~~~~~~~~~~~~~~

Create a line between the two keypoints ``(0, 0, 0)`` and ``(1, 0, 0)``

.. GENERATED FROM PYTHON SOURCE LINES 50-57

.. code-block:: Python


    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    lnum = mapdl.l(k0, k1)
    lnum






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    1



.. GENERATED FROM PYTHON SOURCE LINES 58-62

APDL Command: LARC
~~~~~~~~~~~~~~~~~~
Create a circular arc that travels between ``(0, 0, 0)`` and
``(1, 1, 0)`` with a radius of curvature of 2.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 62-72

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 1, 0)
    k2 = mapdl.k("", 0, 1, 0)
    lnum = mapdl.larc(k0, k1, k2, 2)
    mapdl.lplot(background="w", color="y", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_001.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 73-76

APDL Command: L2ANG
~~~~~~~~~~~~~~~~~~~
Create two circles and join them with a line.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 76-88

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", 0, 0, 0.5)
    carc0 = mapdl.circle(k0, 1, k1)
    carc1 = mapdl.circle(k2, 1, k1)
    lnum = mapdl.l2ang(carc0[0], carc1[0], 90, 90)
    mapdl.lplot(background="w", color="k", line_width=5)





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_002.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-92

APDL Command: L2TAN
~~~~~~~~~~~~~~~~~~~
Create two circular arcs and connect them with a spline.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 92-105

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", -1.5, 1.5, 0)
    k3 = mapdl.k("", -1.5, 1.5, 1)
    carc0 = mapdl.circle(k0, 1, k1, arc=90)
    carc1 = mapdl.circle(k2, 1, k3, arc=90)
    lnum = mapdl.l2tan(1, 2)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_003.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 106-110

APDL Command: LANG
~~~~~~~~~~~~~~~~~~
Create a line from a line from ``(0, 0, 0)`` to ``(1, 0, 0)`` to a
keypoint at ``(1, 1, 1)`` at an angle of 60 degrees.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 110-121

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    lnum = mapdl.l(k0, k1)
    k2 = mapdl.k("", 1, 1, 0)
    lnum = mapdl.lang(lnum, k2, 60)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_004.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 122-125

APDL Command: LAREA
~~~~~~~~~~~~~~~~~~~
Generate a line on a square between its two corners.

.. GENERATED FROM PYTHON SOURCE LINES 125-137

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 1, 0)
    a0 = mapdl.a(k0, k1, k2, k3)
    lnum = mapdl.larea(k0, k2, a0)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_005.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 138-141

APDL Command: LCOMB
~~~~~~~~~~~~~~~~~~~
Create two lines and combine them.

.. GENERATED FROM PYTHON SOURCE LINES 141-150

.. code-block:: Python


    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 2, 0, 0)
    l0 = mapdl.l(k0, k1)
    l1 = mapdl.l(k0, k2)
    lout = mapdl.lcomb(l0, l1)









.. GENERATED FROM PYTHON SOURCE LINES 151-154

APDL Command: LDIV
~~~~~~~~~~~~~~~~~~
Create a single line and divide it into 5 pieces.

.. GENERATED FROM PYTHON SOURCE LINES 154-164

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    l0 = mapdl.l(k0, k1)
    mapdl.ldiv(l0, ndiv=5)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_006.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 165-168

APDL Command: LEXTND
~~~~~~~~~~~~~~~~~~~~
Create a circular arc and extend it at one of its keypoints.

.. GENERATED FROM PYTHON SOURCE LINES 168-178

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    carcs = mapdl.circle(k0, 1, k1, arc=90)
    lnum = mapdl.lextnd(carcs[0], 3, 1)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_007.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 179-183

APDL Command: LFILLT
~~~~~~~~~~~~~~~~~~~~
Create two intersecting lines at a right angle and add a
fillet between them.

.. GENERATED FROM PYTHON SOURCE LINES 183-195

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 1, 0)
    k2 = mapdl.k("", 1, 0, 0)
    l0 = mapdl.l(k0, k1)
    l1 = mapdl.l(k0, k2)
    lnum = mapdl.lfillt(l0, l1, 0.25)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_008.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_008.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 196-200

APDL Command: LTAN
~~~~~~~~~~~~~~~~~~
Create a circular arc and generate a tangent spline at the end of it
directed to a new keypoint.

.. GENERATED FROM PYTHON SOURCE LINES 200-211

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", -1, 1.5, 0)
    carc = mapdl.circle(k0, 1, k1, arc=90)
    lnum = mapdl.ltan(carc[0], k2)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_009.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_009.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 212-215

APDL Command: SPLINE
~~~~~~~~~~~~~~~~~~~~
Generate a segmented spline through 5 keypoints.

.. GENERATED FROM PYTHON SOURCE LINES 215-227

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0.2, 0.2, 0)
    k2 = mapdl.k("", 0.4, 0.3, 0)
    k3 = mapdl.k("", 0.6, 0.5, 0)
    k4 = mapdl.k("", 0.8, 0.3, 0)
    mapdl.spline(k0, k1, k2, k3, k4)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_010.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_010.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 228-235

APDL Command: BSPLIN
~~~~~~~~~~~~~~~~~~~~
Generate a single line from a spline fit to a series of keypoints.
Generate through ``(0, 0, 0)``, ``(0, 1, 0)`` and ``(1, 2, 0)``

This is different than the ``spline`` method as this creates a
single line rather than multiple lines.

.. GENERATED FROM PYTHON SOURCE LINES 235-245

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 1, 0)
    k2 = mapdl.k("", 1, 2, 0)
    lnum = mapdl.bsplin(k0, k1, k2)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_011.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_011.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 246-249

Line IDs
~~~~~~~~
Return an array of the line IDs

.. GENERATED FROM PYTHON SOURCE LINES 249-253

.. code-block:: Python

    lnum = mapdl.geometry.lnum
    lnum






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    array([1], dtype=int32)



.. GENERATED FROM PYTHON SOURCE LINES 254-259

Line Geometry
~~~~~~~~~~~~~
Get the VTK ``MultiBlock`` containing lines.  This VTK mesh can be
saved or plotted.  For more information, see the
`PyVista documentation <pyvista_docs_>`_.

.. GENERATED FROM PYTHON SOURCE LINES 259-264

.. code-block:: Python


    lines = mapdl.geometry.lines
    lines







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table style='width: 100%;'><tr><th>Information</th><th>Blocks</th></tr><tr><td>
    <table>
    <tr><th>Multiblock</th><th>Values</th></tr>
    <tr><td>N Blocks</td><td>1</td></tr>
    <tr><td>X Bounds</td><td>-0.096, 1.000</td></tr>
    <tr><td>Y Bounds</td><td>0.000, 2.000</td></tr>
    <tr><td>Z Bounds</td><td>0.000, 0.000</td></tr>
    </table>

    </td><td>
    <table>
    <tr><th>Index</th><th>Name</th><th>Type</th></tr>
    <tr><th>0</th><th>line 1</th><th>PolyData</th></tr>
    </table>

    </td></tr> </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 265-273

Line Selection
~~~~~~~~~~~~~~
There are two approaches for selecting lines, the old "legacy"
style and the new style.  The old style is valuable for those who
are comfortable with the existing MAPDL commands, and new style is
useful for selecting lines in a pythonic manner.

This example generates a series of random lines and selects them

.. GENERATED FROM PYTHON SOURCE LINES 273-291

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()


    def generate_random_line():
        k0 = mapdl.k("", *np.random.random(3))
        k1 = mapdl.k("", *np.random.random(3))
        mapdl.l(k0, k1)


    # create 20 random lines
    for _ in range(20):
        generate_random_line()

    # Print the line numbers
    print(mapdl.geometry.lnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]




.. GENERATED FROM PYTHON SOURCE LINES 292-293

Select every other line with the old style command.

.. GENERATED FROM PYTHON SOURCE LINES 293-297

.. code-block:: Python

    mapdl.ksel("S", "KP", "", 1, 20, 2)
    print(mapdl.geometry.lnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]




.. GENERATED FROM PYTHON SOURCE LINES 298-302

Select every other line with the new style command.

Note that the item IDs are 1 based in MAPDL, while Python ranges are
0 based.

.. GENERATED FROM PYTHON SOURCE LINES 302-306

.. code-block:: Python

    mapdl.geometry.line_select(range(1, 21, 2))
    print(mapdl.geometry.lnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  3  5  7  9 11 13 15 17 19]




.. GENERATED FROM PYTHON SOURCE LINES 307-314

Select lines from a list

Note that you can ``return_selected`` if you want to see what you
have selected.  This is helpful when reselecting from existing
areas.

Note that you could use a numpy array here as well.

.. GENERATED FROM PYTHON SOURCE LINES 314-318

.. code-block:: Python

    items = mapdl.geometry.line_select([1, 5, 10, 20], return_selected=True)
    print(items)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  5 10 20]




.. GENERATED FROM PYTHON SOURCE LINES 319-325

APDL Command: LPLOT
~~~~~~~~~~~~~~~~~~~
Plot colored lines while displaying the keypoint numbers.

There are a variety of plotting options available for all the common
plotting methods.

.. GENERATED FROM PYTHON SOURCE LINES 325-338

.. code-block:: Python


    mapdl.lplot(
        show_keypoint_numbering=True,
        color_lines=True,
        show_line_numbering=False,
        background="black",
        show_bounds=True,
        line_width=5,
        cpos="xy",
        font_size=26,
    )





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_012.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_012.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 339-342

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 342-343

.. code-block:: Python

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.813 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-geometry_01-lines.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01-lines.ipynb <01-lines.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01-lines.py <01-lines.py>`
