version/0.73/_sources/examples/gallery_examples/01-geometry/01-lines.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01-geometry/01-lines.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-geometry_01-lines.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-geometry_01-lines.py:


.. _ref_basic-geometry-lines:

Lines
-----

This example shows how to create basic geometry
using lines commands.

.. GENERATED FROM PYTHON SOURCE LINES 33-45

.. code-block:: Python


    import numpy as np

    from ansys.mapdl.core import launch_mapdl

    # start MAPDL and enter the pre-processing routine
    mapdl = launch_mapdl()
    mapdl.clear()
    mapdl.prep7()
    print(mapdl)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Mapdl
    -----
    PyMAPDL Version:     0.73.2
    Interface:           grpc
    Product:             Ansys Mechanical Enterprise
    MAPDL Version:       25.2
    Running on:          localhost
                         (127.0.0.1)




.. GENERATED FROM PYTHON SOURCE LINES 46-50

APDL Command: L
~~~~~~~~~~~~~~~

Create a line between the two keypoints ``(0, 0, 0)`` and ``(1, 0, 0)``

.. GENERATED FROM PYTHON SOURCE LINES 50-57

.. code-block:: Python


    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    lnum = mapdl.l(k0, k1)
    lnum






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    1



.. GENERATED FROM PYTHON SOURCE LINES 58-62

APDL Command: LARC
~~~~~~~~~~~~~~~~~~
Create a circular arc that travels between ``(0, 0, 0)`` and
``(1, 1, 0)`` with a radius of curvature of 2.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 62-72

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 1, 0)
    k2 = mapdl.k("", 0, 1, 0)
    lnum = mapdl.larc(k0, k1, k2, 2)
    mapdl.lplot(background="w", color="y", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_001.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 73-76

APDL Command: L2ANG
~~~~~~~~~~~~~~~~~~~
Create two circles and join them with a line.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 76-88

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", 0, 0, 0.5)
    carc0 = mapdl.circle(k0, 1, k1)
    carc1 = mapdl.circle(k2, 1, k1)
    lnum = mapdl.l2ang(carc0[0], carc1[0], 90, 90)
    mapdl.lplot(background="w", color="k", line_width=5)





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_002.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-92

APDL Command: L2TAN
~~~~~~~~~~~~~~~~~~~
Create two circular arcs and connect them with a spline.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 92-105

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", -1.5, 1.5, 0)
    k3 = mapdl.k("", -1.5, 1.5, 1)
    carc0 = mapdl.circle(k0, 1, k1, arc=90)
    carc1 = mapdl.circle(k2, 1, k3, arc=90)
    lnum = mapdl.l2tan(1, 2)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_003.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 106-110

APDL Command: LANG
~~~~~~~~~~~~~~~~~~
Create a line from a line from ``(0, 0, 0)`` to ``(1, 0, 0)`` to a
keypoint at ``(1, 1, 1)`` at an angle of 60 degrees.  Plot the result.

.. GENERATED FROM PYTHON SOURCE LINES 110-121

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    lnum = mapdl.l(k0, k1)
    k2 = mapdl.k("", 1, 1, 0)
    lnum = mapdl.lang(lnum, k2, 60)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_004.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 122-125

APDL Command: LAREA
~~~~~~~~~~~~~~~~~~~
Generate a line on a square between its two corners.

.. GENERATED FROM PYTHON SOURCE LINES 125-137

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 1, 0)
    a0 = mapdl.a(k0, k1, k2, k3)
    lnum = mapdl.larea(k0, k2, a0)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_005.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 138-141

APDL Command: LCOMB
~~~~~~~~~~~~~~~~~~~
Create two lines and combine them.

.. GENERATED FROM PYTHON SOURCE LINES 141-150

.. code-block:: Python


    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 2, 0, 0)
    l0 = mapdl.l(k0, k1)
    l1 = mapdl.l(k0, k2)
    lout = mapdl.lcomb(l0, l1)









.. GENERATED FROM PYTHON SOURCE LINES 151-154

APDL Command: LDIV
~~~~~~~~~~~~~~~~~~
Create a single line and divide it into 5 pieces.

.. GENERATED FROM PYTHON SOURCE LINES 154-164

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    l0 = mapdl.l(k0, k1)
    mapdl.ldiv(l0, ndiv=5)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_006.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 165-168

APDL Command: LEXTND
~~~~~~~~~~~~~~~~~~~~
Create a circular arc and extend it at one of its keypoints.

.. GENERATED FROM PYTHON SOURCE LINES 168-178

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    carcs = mapdl.circle(k0, 1, k1, arc=90)
    lnum = mapdl.lextnd(carcs[0], 3, 1)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_007.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 179-183

APDL Command: LFILLT
~~~~~~~~~~~~~~~~~~~~
Create two intersecting lines at a right angle and add a
fillet between them.

.. GENERATED FROM PYTHON SOURCE LINES 183-195

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 1, 0)
    k2 = mapdl.k("", 1, 0, 0)
    l0 = mapdl.l(k0, k1)
    l1 = mapdl.l(k0, k2)
    lnum = mapdl.lfillt(l0, l1, 0.25)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_008.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_008.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 196-200

APDL Command: LTAN
~~~~~~~~~~~~~~~~~~
Create a circular arc and generate a tangent spline at the end of it
directed to a new keypoint.

.. GENERATED FROM PYTHON SOURCE LINES 200-211

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", -1, 1.5, 0)
    carc = mapdl.circle(k0, 1, k1, arc=90)
    lnum = mapdl.ltan(carc[0], k2)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_009.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_009.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 212-215

APDL Command: SPLINE
~~~~~~~~~~~~~~~~~~~~
Generate a segmented spline through 5 keypoints.

.. GENERATED FROM PYTHON SOURCE LINES 215-227

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0.2, 0.2, 0)
    k2 = mapdl.k("", 0.4, 0.3, 0)
    k3 = mapdl.k("", 0.6, 0.5, 0)
    k4 = mapdl.k("", 0.8, 0.3, 0)
    mapdl.spline(k0, k1, k2, k3, k4)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_010.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_010.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 228-235

APDL Command: BSPLIN
~~~~~~~~~~~~~~~~~~~~
Generate a single line from a spline fit to a series of keypoints.
Generate through ``(0, 0, 0)``, ``(0, 1, 0)`` and ``(1, 2, 0)``

This is different than the ``spline`` method as this creates a
single line rather than multiple lines.

.. GENERATED FROM PYTHON SOURCE LINES 235-245

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 1, 0)
    k2 = mapdl.k("", 1, 2, 0)
    lnum = mapdl.bsplin(k0, k1, k2)
    mapdl.lplot(background="w", color="k", line_width=5, cpos="xy")





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_011.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_011.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 246-249

Line IDs
~~~~~~~~
Return an array of the line IDs

.. GENERATED FROM PYTHON SOURCE LINES 249-253

.. code-block:: Python

    lnum = mapdl.geometry.lnum
    lnum






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    array([1], dtype=int32)



.. GENERATED FROM PYTHON SOURCE LINES 254-259

Line Geometry
~~~~~~~~~~~~~
Get the VTK ``MultiBlock`` containing lines.  This VTK mesh can be
saved or plotted.  For more information, see the
`PyVista documentation <pyvista_docs_>`_.

.. GENERATED FROM PYTHON SOURCE LINES 259-264

.. code-block:: Python


    lines = mapdl.geometry.lines
    lines







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><style>/* PyVista HTML repr stylesheet.
     * Uses pv- prefix to avoid conflicts with other libraries.
     */

    :root {
      --pv-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --pv-border-color: var(--jp-border-color2, #e0e0e0);
      --pv-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --pv-background-color-row-even: var(--jp-layout-color1, #f5f5f5);
      --pv-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
      --pv-badge-active: #1b5e20;
      --pv-badge-normals: #0d47a1;
      --pv-badge-vectors: #00695c;
      --pv-badge-tcoords: #4527a0;
    }

    body[data-jp-theme-light="false"] {
      --pv-font-color0: var(--jp-content-font-color0, rgba(255, 255, 255, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(255, 255, 255, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(255, 255, 255, 0.38));
      --pv-border-color: var(--jp-border-color2, #424242);
      --pv-disabled-color: var(--jp-layout-color3, #616161);
      --pv-background-color-row-even: var(--jp-layout-color1, #1a1a1a);
      --pv-background-color-row-odd: var(--jp-layout-color2, #252525);
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    html[theme="dark"],
    html[data-theme="dark"],
    body[data-theme="dark"],
    body.vscode-dark {
      --pv-font-color0: rgba(255, 255, 255, 1);
      --pv-font-color2: rgba(255, 255, 255, 0.54);
      --pv-font-color3: rgba(255, 255, 255, 0.38);
      --pv-border-color: #424242;
      --pv-disabled-color: #616161;
      --pv-background-color-row-even: #1a1a1a;
      --pv-background-color-row-odd: #252525;
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    /* OS-level dark mode fallback: applies when no explicit data-theme is set */
    @media (prefers-color-scheme: dark) {
      html:not([data-theme="light"]) {
        --pv-font-color0: rgba(255, 255, 255, 1);
        --pv-font-color2: rgba(255, 255, 255, 0.54);
        --pv-font-color3: rgba(255, 255, 255, 0.38);
        --pv-border-color: #424242;
        --pv-disabled-color: #616161;
        --pv-background-color-row-even: #1a1a1a;
        --pv-background-color-row-odd: #252525;
        --pv-badge-active: #66bb6a;
        --pv-badge-normals: #64b5f6;
        --pv-badge-vectors: #4db6ac;
        --pv-badge-tcoords: #b39ddb;
      }
    }

    .pv-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
      line-height: 1.6;
      padding-bottom: 4px;
      font-family: var(--jp-ui-font-family, sans-serif);
      font-size: var(--jp-ui-font-size1, 13px);
      color: var(--pv-font-color0);
    }

    .pv-text-repr-fallback {
      display: none;
    }

    /* Header */
    .pv-header {
      display: flex;
      align-items: center;
      gap: 8px;
      padding-top: 6px;
      padding-bottom: 6px;
      border-bottom: solid 1px var(--pv-border-color);
      margin-bottom: 4px;
    }

    .pv-header-text {
      display: flex;
      flex-direction: column;
      gap: 1px;
      min-width: 0;
      flex: 1;
    }

    .pv-obj-type {
      font-weight: 600;
      color: var(--pv-font-color0);
    }

    .pv-header-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 2px 7px;
      border-radius: 3px;
      color: var(--pv-font-color2);
      border: 1px solid var(--pv-border-color);
      white-space: nowrap;
    }

    /* Metadata (always-visible key-value rows) */
    .pv-metadata {
      margin: 4px 0 6px 0;
      font-size: 0.92em;
      line-height: 1.5;
    }

    .pv-meta-row {
      display: flex;
      flex-wrap: wrap;
      gap: 1px 14px;
      padding: 1px 0;
    }

    .pv-meta-row-label {
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
      min-width: 60px;
    }

    .pv-meta-entry {
      white-space: nowrap;
    }

    /* Copy-to-clipboard button */
    .pv-copy-btn {
      display: inline-block;
      cursor: pointer;
      opacity: 0.5;
      font-size: 0.85em;
      padding: 0 3px;
      vertical-align: middle;
      transition: opacity 0.15s;
      user-select: none;
      border: none;
      background: none;
      color: var(--pv-font-color3);
    }

    .pv-copy-btn:hover {
      opacity: 1;
      color: var(--pv-font-color0);
    }

    .pv-meta-label {
      color: var(--pv-font-color3);
      font-weight: 400;
      padding-right: 2px;
    }

    /* Sections grid */
    .pv-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto auto 1fr 20px 20px;
      margin-block-start: 0;
      margin-block-end: 0;
      list-style: none;
    }

    .pv-section-item {
      display: contents;
    }

    /* Hidden checkbox for expand/collapse */
    .pv-section-item > input {
      display: block;
      opacity: 0;
      height: 0;
      margin: 0;
    }

    .pv-section-item > input + label {
      color: var(--pv-disabled-color);
    }

    .pv-section-item > input:enabled + label {
      cursor: pointer;
      color: var(--pv-font-color2);
    }

    .pv-section-item > input:enabled + label:hover {
      color: var(--pv-font-color0);
    }

    /* Section summary (left column label) */
    .pv-section-summary {
      grid-column: 1;
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
    }

    .pv-section-summary > span {
      display: inline-block;
      padding-left: 0.3em;
    }

    .pv-section-summary-in:disabled + label {
      color: var(--pv-font-color2);
    }

    /* Expand/collapse arrows */
    .pv-section-summary-in + label:before {
      display: inline-block;
      content: "\25b6";
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .pv-section-summary-in:disabled + label:before {
      color: var(--pv-disabled-color);
    }

    .pv-section-summary-in:checked + label:before {
      content: "\25bc";
    }

    .pv-section-summary-in:checked + label > span {
      display: none;
    }

    .pv-section-summary,
    .pv-section-inline-details {
      padding-top: 4px;
    }

    .pv-section-inline-details {
      grid-column: 2 / -1;
    }

    .pv-section-details {
      grid-column: 1 / -1;
      margin-top: 4px;
      margin-bottom: 5px;
    }

    .pv-section-summary-in ~ .pv-section-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-inline-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-details {
      display: block;
    }

    .pv-section-summary-in:checked ~ .pv-section-details:has(.pv-var-list) {
      display: contents;
    }

    /* Variable (array) list */
    .pv-var-list,
    .pv-var-item {
      display: contents;
    }

    .pv-var-item > div,
    .pv-var-item label,
    .pv-var-item > .pv-var-name span {
      background-color: var(--pv-background-color-row-even);
      border-color: var(--pv-background-color-row-odd);
      margin-bottom: 0;
      padding-top: 2px;
    }

    .pv-var-list > li:nth-child(odd) > div,
    .pv-var-list > li:nth-child(odd) > label,
    .pv-var-list > li:nth-child(odd) > .pv-var-name span {
      background-color: var(--pv-background-color-row-odd);
      border-color: var(--pv-background-color-row-even);
    }

    .pv-var-name {
      grid-column: 1;
    }

    .pv-var-dims {
      grid-column: 2;
    }

    .pv-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--pv-font-color2);
    }

    .pv-var-range {
      grid-column: 4;
      color: var(--pv-font-color3);
      font-size: 0.92em;
    }

    .pv-var-badges {
      grid-column: 5;
      padding-left: 8px;
    }

    .pv-var-name,
    .pv-var-dims,
    .pv-var-dtype,
    .pv-var-range {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .pv-var-name:hover,
    .pv-var-dims:hover,
    .pv-var-dtype:hover,
    .pv-var-range:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .pv-var-name span {
      padding-left: 25px !important;
    }

    .pv-var-name-active span {
      font-weight: 600;
    }

    /* Badges */
    .pv-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 1px 5px;
      border-radius: 3px;
      vertical-align: middle;
      line-height: 1.4;
    }

    .pv-badge-active {
      color: var(--pv-badge-active);
      border: 1px solid var(--pv-badge-active);
    }

    .pv-badge-normals {
      color: var(--pv-badge-normals);
      border: 1px solid var(--pv-badge-normals);
    }

    .pv-badge-vectors {
      color: var(--pv-badge-vectors);
      border: 1px solid var(--pv-badge-vectors);
    }

    .pv-badge-tcoords {
      color: var(--pv-badge-tcoords);
      border: 1px solid var(--pv-badge-tcoords);
    }

    /* Logo and Icons */
    .pv-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-logo svg {
      width: 28px;
      height: 28px;
    }

    .pv-brand-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-brand-logo svg {
      height: 20px;
      width: auto;
    }

    /* Children list (MultiBlock / PartitionedDataSet) */
    .pv-children-list {
      padding-left: 25px !important;
      list-style: none;
    }

    .pv-children-list li {
      padding: 1px 0;
    }

    .pv-child-name {
      font-weight: 500;
    }

    .pv-child-type {
      color: var(--pv-font-color2);
      font-style: italic;
    }

    .pv-child-type:before {
      content: "\00b7";
      padding: 0 6px;
      font-style: normal;
    }

    .pv-child-detail {
      color: var(--pv-font-color3);
      font-size: 0.9em;
    }

    .pv-child-detail:not(:empty):before {
      content: "\00b7";
      padding: 0 6px;
    }
    </style><pre class='pv-text-repr-fallback'>Multiblock (0x7fa1a0c72860)
      N Blocks:   1
      X Bounds:   -9.611e-02, 1.000e+00
      Y Bounds:   0.000e+00, 2.000e+00
      Z Bounds:   0.000e+00, 0.000e+00</pre><div class='pv-wrap' style='display:none'><div class='pv-header'><span class='pv-logo'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
      <defs>
        <linearGradient id="pv-mb-top1" x1="0" y1="0" x2="1" y2="1">
          <stop offset="0%" stop-color="#ffd040"/>
          <stop offset="100%" stop-color="#376fa0"/>
        </linearGradient>
        <linearGradient id="pv-mb-top2" x1="0" y1="0" x2="1" y2="1">
          <stop offset="0%" stop-color="#376fa0"/>
          <stop offset="100%" stop-color="#ffd040"/>
        </linearGradient>
      </defs>
      <polygon points="13,2 22,6 13,10 4,6" fill="url(#pv-mb-top1)" opacity="0.9"/>
      <polygon points="4,6 13,10 13,17 4,13" fill="#1a4a70" opacity="0.9"/>
      <polygon points="22,6 13,10 13,17 22,13" fill="#376fa0" opacity="0.85"/>
      <g stroke="rgba(255,255,255,0.4)" stroke-width="0.35" fill="none">
        <polygon points="13,2 22,6 13,10 4,6"/>
        <line x1="13" y1="10" x2="13" y2="17"/>
        <line x1="4" y1="6" x2="4" y2="13"/>
        <line x1="22" y1="6" x2="22" y2="13"/>
        <line x1="4" y1="13" x2="13" y2="17"/>
        <line x1="22" y1="13" x2="13" y2="17"/>
      </g>
      <polygon points="17,7 26,11 17,15 8,11" fill="url(#pv-mb-top2)" opacity="0.9"/>
      <polygon points="8,11 17,15 17,22 8,18" fill="#1a4a70" opacity="0.85"/>
      <polygon points="26,11 17,15 17,22 26,18" fill="#376fa0" opacity="0.85"/>
      <g stroke="rgba(255,255,255,0.4)" stroke-width="0.35" fill="none">
        <polygon points="17,7 26,11 17,15 8,11"/>
        <line x1="17" y1="15" x2="17" y2="22"/>
        <line x1="8" y1="11" x2="8" y2="18"/>
        <line x1="26" y1="11" x2="26" y2="18"/>
        <line x1="8" y1="18" x2="17" y2="22"/>
        <line x1="26" y1="18" x2="17" y2="22"/>
      </g>
      <polygon points="19,13 28,17 19,21 10,17" fill="url(#pv-mb-top1)" opacity="0.95"/>
      <polygon points="10,17 19,21 19,28 10,24" fill="#1a4a70" opacity="0.9"/>
      <polygon points="28,17 19,21 19,28 28,24" fill="#376fa0" opacity="0.9"/>
      <g stroke="rgba(255,255,255,0.45)" stroke-width="0.35" fill="none">
        <polygon points="19,13 28,17 19,21 10,17"/>
        <line x1="19" y1="21" x2="19" y2="28"/>
        <line x1="10" y1="17" x2="10" y2="24"/>
        <line x1="28" y1="17" x2="28" y2="24"/>
        <line x1="10" y1="24" x2="19" y2="28"/>
        <line x1="28" y1="24" x2="19" y2="28"/>
      </g>
    </svg>
    </span><div class='pv-header-text'><div class='pv-obj-type'>Multiblock <span class='pv-header-badge'>1 blocks</span> <span class='pv-header-badge'>6 KiB</span></div></div><span class='pv-brand-logo'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 24">
      <text x="0" y="18" font-family="system-ui,-apple-system,sans-serif" font-size="18" font-weight="700" font-style="italic" letter-spacing="-0.5">
        <tspan fill="#3776AB" opacity="0.7">P</tspan><tspan fill="#FFD43B" opacity="0.7">y</tspan><tspan fill="#008c9e">Vista</tspan>
      </text>
    </svg>
    </span></div><div class='pv-metadata'><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>Bounds</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(-0.09610577505811946, 1.0, 0.0, 2.0, 0.0, 0.0)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'>X</span> [-9.611e-02, 1.000e+00]</span><span class='pv-meta-entry'><span class='pv-meta-label'>Y</span> [0.000e+00, 2.000e+00]</span><span class='pv-meta-entry'><span class='pv-meta-label'>Z</span> [0.000e+00, 0.000e+00]</span></div></div><ul class='pv-sections'><li class='pv-section-item'><input id='section-9f5ba718-92af-4ef5-986d-535047a0c56a' class='pv-section-summary-in' type='checkbox' checked /><label for='section-9f5ba718-92af-4ef5-986d-535047a0c56a' class='pv-section-summary' title='Expand/collapse section'>Blocks: <span>(1)</span></label><div class='pv-section-inline-details'></div><div class='pv-section-details'><ul class='pv-children-list'><li><span class='pv-child-name'>line 1</span><span class='pv-child-type'>PolyData</span><span class='pv-child-detail'>100 pts · 1 cells · 6 KiB</span></li></ul></div></li></ul></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 265-273

Line Selection
~~~~~~~~~~~~~~
There are two approaches for selecting lines, the old "legacy"
style and the new style.  The old style is valuable for those who
are comfortable with the existing MAPDL commands, and new style is
useful for selecting lines in a pythonic manner.

This example generates a series of random lines and selects them

.. GENERATED FROM PYTHON SOURCE LINES 273-291

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()


    def generate_random_line():
        k0 = mapdl.k("", *np.random.random(3))
        k1 = mapdl.k("", *np.random.random(3))
        mapdl.l(k0, k1)


    # create 20 random lines
    for _ in range(20):
        generate_random_line()

    # Print the line numbers
    print(mapdl.geometry.lnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]




.. GENERATED FROM PYTHON SOURCE LINES 292-293

Select every other line with the old style command.

.. GENERATED FROM PYTHON SOURCE LINES 293-297

.. code-block:: Python

    mapdl.ksel("S", "KP", "", 1, 20, 2)
    print(mapdl.geometry.lnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]




.. GENERATED FROM PYTHON SOURCE LINES 298-302

Select every other line with the new style command.

Note that the item IDs are 1 based in MAPDL, while Python ranges are
0 based.

.. GENERATED FROM PYTHON SOURCE LINES 302-306

.. code-block:: Python

    mapdl.geometry.line_select(range(1, 21, 2))
    print(mapdl.geometry.lnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  3  5  7  9 11 13 15 17 19]




.. GENERATED FROM PYTHON SOURCE LINES 307-314

Select lines from a list

Note that you can ``return_selected`` if you want to see what you
have selected.  This is helpful when reselecting from existing
areas.

Note that you could use a numpy array here as well.

.. GENERATED FROM PYTHON SOURCE LINES 314-318

.. code-block:: Python

    items = mapdl.geometry.line_select([1, 5, 10, 20], return_selected=True)
    print(items)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  5 10 20]




.. GENERATED FROM PYTHON SOURCE LINES 319-325

APDL Command: LPLOT
~~~~~~~~~~~~~~~~~~~
Plot colored lines while displaying the keypoint numbers.

There are a variety of plotting options available for all the common
plotting methods.

.. GENERATED FROM PYTHON SOURCE LINES 325-338

.. code-block:: Python


    mapdl.lplot(
        show_keypoint_numbering=True,
        color_lines=True,
        show_line_numbering=False,
        background="black",
        show_bounds=True,
        line_width=5,
        cpos="xy",
        font_size=26,
    )





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_012.png
   :alt: 01 lines
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_01-lines_012.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 339-342

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 342-343

.. code-block:: Python

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.223 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-geometry_01-lines.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01-lines.ipynb <01-lines.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01-lines.py <01-lines.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 01-lines.zip <01-lines.zip>`
